# Edtmrs_Project

./: CLEANUP_GUIDE.md  EDTMRS_Setup_Guide (1).docx  README.md
admin_server/: OPEN_FIREWALL.bat  START_ADMIN_SERVER.bat  api_routes.py  auth.py  database.py  edtmrs.db  main.py  models.py  requirements.txt  test_server.py  websocket_manager.py
dashboard/: .env  .env.example  START_DASHBOARD.bat  package-lock.json  package.json  tailwind.config.js
dashboard/public/: index.html
dashboard/src/: App.js  index.css
dashboard/src/components/: AlertPopup.jsx  RiskBadge.jsx  Sidebar.jsx
dashboard/src/hooks/: useAuth.js  useWebSocket.js
dashboard/src/pages/: AlertsPage.jsx  DashboardPage.jsx  DevicesPage.jsx  EndpointsPage.jsx  LoginPage.jsx  PolicyPage.jsx
dashboard/src/utils/: api.js
database/: schema.sql
endpoint_agent/: CMakeLists.txt  SETUP_USER_PC.bat  UNINSTALL.bat  blocker.cpp  blocker.h  compile_and_install.bat  config.ini  device_monitor.cpp  device_monitor.h  http_client.cpp  http_client.h  install_agent.bat  main.cpp  uninstall_agent.bat
scripts/: build_agent.ps1  setup_admin.ps1  start_server.py
